--- a/index.qmd
+++ b/index.qmd
@@ -53,9 +53,12 @@ best_model = model_comparison.loc[model_comparison['R2_Score'].idxmax()]
 
 ## Introduction
 
-The entertainment industry spends billions annually on celebrity salaries, assuming star power drives box office success. This project investigates: **Are movie stars worth their premium salaries?**
+The entertainment industry is a billion-dollar sector that relies heavily on star power to drive box-office success. Studios pay top salaries, expecting A-list stars to ensure high returns. However, based on my experience, that's not always the case, and I find I enjoy lesser-known films that most people haven't heard of more than movies with a big cast.
 
-Using data mining techniques, I analyzed whether star power—measured as cast members' historical ROI—predicts financial success better than factors like budget discipline, release timing, and franchise status.
+This project aims to determine whether a star-studded cast or the surprise of a low-budget film with an unknown cast is more effective. Motivated by this gap, I wanted to see if movie stars are truly worth their premiums or if key factors like budget discipline and storytelling are the main contributors to ROI.
+
+Using data mining techniques on 5,311 films spanning 1915–2017, I analyzed whether star power, measured by a cast's historical performance, better predicts success than factors such as release timing and franchise status. The goal was to move beyond industry anecdotes and see if the numbers confirm that execution matters more than fame.
+
 
 ### Dataset
 
@@ -72,21 +75,53 @@ The analysis uses three merged Kaggle datasets: `{python} f"{total_movies:,}"` m
 | `is_franchise` | Whether part of a franchise |
 | `star_tier` | Superstar, A-list, B-list, or Unknown |
 
-**Limitation:** Only `{python} movies_with_cast_data` movies (`{python} f"{movies_with_cast_data/total_movies*100:.0f}"`%) have complete cast ROI data.
+
 
 ## Methodology
 
 I used a two-pronged approach: traditional statistics (correlation, ANOVA, t-test) and machine learning (6 regression models including XGBoost, Random Forest, and Lasso).
 
-**Why this approach?** Correlation measures linear relationships. ANOVA compares means across star tiers. The t-test directly compares premium talent vs. others. Machine learning captures non-linear patterns and ranks feature importance.
+Correlation measures linear relationships. ANOVA compares means across star tiers. The t-test directly compares premium talent vs. others. Machine learning captures non-linear patterns and ranks feature importance.
 
-Six models were compared to ensure robust findings—if multiple algorithms agree that star power ranks low, the conclusion is reliable.
+Six models were compared to ensure robust findings if multiple algorithms agree that star power ranks low, the conclusion is reliable.
 
 ## Results
 
 ### Statistical Evidence
 
-**Correlation:** Star power has a weak correlation with ROI (r = `{python} f"{star_corr:.3f}"`), explaining only `{python} f"{star_r_squared*100:.1f}"`% of variance.
+**Statistical Evidence: Correlation Analysis:** Correlation measures the linear relationship between two variables, ranging from -1 (perfect negative relationship) to +1 (perfect positive relationship). Values near zero indicate no meaningful relationship.
+When I examined what factors correlate with ROI, the results challenged conventional industry:
+
+| Feature | Correlation | Interpretation |
+|---------|-------------|----------------|
+| vote_average | 0.171 | Strongest positive—better audience ratings associate with slightly higher ROI |
+| revenue | 0.146 | Positive but misleading (ROI is calculated from revenue, so this is partially circular) |
+| budget | -0.135 | Negative—higher budgets tend to *reduce* ROI, not increase it |
+| cast_avg_roi | 0.078 | Very weak—star power barely correlates with movie ROI |
+| runtime | -0.029 | Near zero—film length has almost no relationship with returns |
+
+**What does a 0.078 correlation actually mean?**
+
+The correlation squared tells us how much variance one variable explains in another. For star power:
+
+0.078² = 0.006, or **0.6%**
+
+This means star power explains less than 1% of the variation in movie ROI. The other 99.4% is driven by factors unrelated to who's in the cast.
+
+**The Budget Paradox**
+
+The most counterintuitive finding is budget's having a negative correlation (-0.135). Ideally, spending more should yield more however, higher budgets raise the threshold for success. A $200 million film needs massive returns just to break even, while a $5 million production can achieve extraordinary ROI with modest ticket sales. This is why budget discipline rather than budget size emerged as the top predictor in my machine learning models.
+
+**Why Stars Don't Move the Needle**
+
+If star power truly drove financial success, there would be a stronger correlation of at least 0.3 to 0.5 a moderate to strong relationship. Instead, 0.078 is statistically negligible. For comparison, vote_average (audience ratings) correlates more than twice as strongly with ROI, suggesting that what audiences think of a film matters far more than who's in it.
+
+The correlation analysis was my first indication that the industry's star-power assumption might be fundamentally flawed. The machine learning models would later confirm it.
+
+
+
+
+
 
 ```{python}
 #| label: correlation-heatmap
@@ -100,7 +135,23 @@ plt.tight_layout()
 plt.show()
 ```
 
-**T-Test:** Top-tier stars (A-list + Superstar) show +`{python} f"{alist_roi.mean() - other_roi.mean():.0f}"`% higher average ROI than others. However, Cohen's d = `{python} f"{cohens_d:.2f}"` indicates negligible effect size—the distributions overlap heavily, meaning stars don't guarantee returns.
+**Hypothesis Testing: Statistical vs. Practical Significance**
+
+The t-test addressed a specific question of whether there is a significant difference in ROI between movies with top-tier stars (historical ROI >150%) and those without.
+
+Initially, this would seem to be true because the films with top-tier stars had a 121% higher ROI, with a statistically significant p-value of 0.024.
+However, statistical significance does not equal practical relevance.
+
+The effect size (Cohen's d) was only 0.14, which is considered negligible. This low figure indicates that the distributions overlap heavily across most films, with stars performing similarly to those without.
+The 121% average isn't driven by consistent outperformance, but by massive outliers skewing the math. Although the p-value indicates a statistically significant difference, the small effect size suggests that stars are not reliable predictors of consistent returns but most liekly associated with infrequent, costly increases.
+
+
+
+
+
+
+
+
 
 ```{python}
 #| label: star-tier-boxplot
@@ -117,11 +168,14 @@ plt.tight_layout()
 plt.show()
 ```
 
-### Machine Learning Evidence
+### Machine Learning & Feature Importance
 
-**Critical Correction:** Initial models showed 93.2% R-squared with star power dominating. I discovered target leakage—revenue was included as a predictor. Since ROI = (Revenue - Budget) / Budget, this was circular logic.
+To move beyond simple correlations, I trained six machine learning models to identify which factors best predict ROI. The top performer was XGBoost (Extreme Gradient Boosting), an algorithm that builds sequential decision trees to capture complex patterns that simpler statistics often miss.
 
-After removing revenue, XGBoost achieved `{python} f"{best_model['R2_Score']*100:.1f}"`% R-squared. The corrected feature importance:
+To ensure model validity, I excluded revenue-based variables to prevent target leakage. The final model achieved an R-squared of 33.7%, explaining roughly one-third of the variance in movie success.
+
+The feature importance rankings quantified the disconnect between salary and value. Budget Discipline ranked as the #1 predictor (30.4% importance), while Star Power ranked 29th (1.12%). The data shows a 27-to-1 difference in impact, confirming that among the factors we can control, keeping budgets lean matters far more than who is on the poster.
+
 
 ```{python}
 #| label: feature-importance
@@ -137,20 +191,22 @@ plt.tight_layout()
 plt.show()
 ```
 
-**Key Finding:** Budget category ranks #1 at `{python} f"{budget_imp*100:.1f}"`% importance. Star power (`cast_avg_roi`) ranks #`{python} star_power_rank` at `{python} f"{star_power_imp*100:.2f}"`%. Budget is **`{python} f"{budget_imp/star_power_imp:.0f}"`x more important** than star power.
+**Key Finding:** Budget category ranks #1 at `{python} f"{budget_imp*100:.1f}"`% importance. Star power (`cast_avg_roi`) ranks at `{python} f"{star_power_imp*100:.2f}"`%. Budget is `{python} f"{budget_imp/star_power_imp:.0f}"`x more important than star power.
 
-## Discussion
+## Final Thoughts
 
-Both statistical and machine learning evidence converge: **movie stars are not worth their premiums based on ROI.**
+My analysis confirms that movie stars are overpaid relative to their ROI. While recognizable names generate buzz and simplify marketing, their premium salaries inflate budgets and drastically raise the break-even point for profitability.
 
-The weak correlation (r = `{python} f"{star_corr:.3f}"`) and low feature importance (`{python} f"{star_power_imp*100:.1f}"`%) show star power has minimal predictive value. While stars show higher average ROI, the negligible effect size (d = `{python} f"{cohens_d:.2f}"`) reveals this is driven by outliers, not consistent performance.
+The smarter investment prioritizes story and budget discipline. Studios like A24 and the horror genre demonstrate that compelling narratives and efficient production yield returns that massive blockbusters cannot match.
 
-Budget discipline ranking first aligns with industry reality: micro-budget films need smaller returns to profit. A $2M film earning $10M achieves 400% ROI, while a $200M blockbuster earning $400M achieves only 100%.
+The data supports that star power shows minimal predictive value (r = 0.078; feature importance 1.1%). While films with stars show a slightly higher average ROI, the negligible effect size (d = 0.14) suggests this is driven by outliers rather than consistent performance. Stars don't guarantee returns; they just make the math harder.
 
-**Limitations:** The `{python} f"{best_model['R2_Score']*100:.0f}"`% R-squared means `{python} f"{(1-best_model['R2_Score'])*100:.0f}"`% of variance is unexplained—likely marketing, word-of-mouth, and cultural timing. Data ends in 2017, before streaming transformed the industry.
+While the model has limitations explaining 34% of variance and predating the streaming era, the economic reality remains to maximize ROI, bet on the story, not the star.
 
 ## Conclusion
 
-Across `{python} f"{total_movies:,}"` films, star power ranks #`{python} star_power_rank` of `{python} len(feature_importance)` features at `{python} f"{star_power_imp*100:.1f}"`% importance. Budget discipline is `{python} f"{budget_imp/star_power_imp:.0f}"`x more important.
+Across `{python} f"{total_movies:,}"` films, star power ranks 29 of `{python} len(feature_importance)` features at `{python} f"{star_power_imp*100:.1f}"`% importance. Budget discipline is `{python} f"{budget_imp/star_power_imp:.0f}"`x more important.
 
 **Recommendation:** Studios should prioritize budget management, franchise development, and audience engagement over celebrity salaries. Unknown actors may offer better risk-adjusted returns than expensive A-list talent.
+
+[Are Movie Stars Worth Their Premiums? - Presentation Recording](https://drive.google.com/file/d/1SSftKouaSFc6OTQPVkvTa477m4PisKmm/view)
