--- a/index.qmd
+++ b/index.qmd
@@ -90,7 +90,7 @@ Six models were compared to ensure robust findings if multiple algorithms agree 
 ### Statistical Evidence
 
 **Statistical Evidence: Correlation Analysis:** Correlation measures the linear relationship between two variables, ranging from -1 (perfect negative relationship) to +1 (perfect positive relationship). Values near zero indicate no meaningful relationship.
-When I examined what factors correlate with ROI, the results challenged conventional industry:
+When I examined what factors correlate with ROI, the results challenged conventional industry thinking:
 
 | Feature | Correlation | Interpretation |
 |---------|-------------|----------------|
@@ -100,13 +100,7 @@ When I examined what factors correlate with ROI, the results challenged conventi
 | cast_avg_roi | 0.078 | Very weak—star power barely correlates with movie ROI |
 | runtime | -0.029 | Near zero—film length has almost no relationship with returns |
 
-**What does a 0.078 correlation actually mean?**
 
-The correlation squared tells us how much variance one variable explains in another. For star power:
-
-0.078² = 0.006, or **0.6%**
-
-This means star power explains less than 1% of the variation in movie ROI. The other 99.4% is driven by factors unrelated to who's in the cast.
 
 **The Budget Paradox**
 
@@ -134,6 +128,15 @@ plt.title('Correlation Matrix: ROI and Key Predictors', fontweight='bold')
 plt.tight_layout()
 plt.show()
 ```
+
+**What does a 0.078 correlation actually mean?**
+
+The correlation squared tells us how much variance one variable explains in another. For star power:
+
+0.078² = 0.006, or **0.6%**
+
+This means star power explains less than 1% of the variation in movie ROI. The other 99.4% is driven by factors unrelated to who's in the cast.
+
 
 **Hypothesis Testing: Statistical vs. Practical Significance**
 
