--- a/index.qmd
+++ b/index.qmd
@@ -212,7 +212,7 @@ Across `{python} f"{total_movies:,}"` films, star power ranks 29 of `{python} le
 
 **Recommendation:** Studios should prioritize budget management, franchise development, and audience engagement over celebrity salaries. Unknown actors may offer better risk-adjusted returns than expensive A-list talent.
 
-[Are Movie Stars Worth Their Premiums? - Presentation Recording](https://drive.google.com/file/d/1SSftKouaSFc6OTQPVkvTa477m4PisKmm/view)
+[Are Movie Stars Worth Their Premiums? - Pending Presentation Recording](https://drive.google.com/file/d/1SSftKouaSFc6OTQPVkvTa477)
 
 ## Supporting Work
 
