--- a/presentation.qmd
+++ b/presentation.qmd
@@ -2,7 +2,7 @@
 title: "Are Movie Stars Worth Their Premiums?"
 subtitle: "INFO 523 - Data Mining and Discovery - Final Project"
 author: "Juan Nadal"
-institute: "[Pending View Presentation Recording](https://drive.google.com/file/d/1SSftKouaSFc6OTQPVkvTa477m4)"
+institute: "[View Presentation Recording](https://drive.google.com/file/d/1SSftKouaSFc6OTQPVkvTa477m4)"
 title-slide-attributes:
   data-background-image: images/watercolour_sys02_img34_teacup-ocean.jpg
   data-background-size: stretch
@@ -49,22 +49,24 @@ execute:
 
 ## The Answer {.center}
 
-::: {.fragment .fade-in}
+
 ### **NO**
 ### (Stars are NOT worth their premiums)
-:::
 
-::: {.fragment .fade-in}
+
+
 **Star power has minimal impact on ROI**
 
 ::: {style="font-size: 0.85em;"}
 - Statistical correlation: r = 0.078 (weak, p < 0.001)
+  - **Explains only 0.6% of variance** (99.4% is other factors)
 - ML importance: **1.12%** (Rank #29 out of 51 features)
 - Effect size: Cohen's d = 0.14 (negligible)
+  - Stars occasionally win big, but don't **consistently** outperform
 - Best model: XGBoost R² = 33.7% (without revenue)
 - Sample: 640 movies (12%) with complete cast financial data
 :::
-:::
+
 
 ## Data Overview {.smaller}
 
@@ -79,33 +81,6 @@ execute:
 | Features | 60 |
 
 **Success Metric:** ROI = (Revenue - Budget) / Budget × 100
-
-## Data Quality & Outlier Handling {.smaller}
-
-**Challenge:** Raw dataset contained extreme outliers and data errors
-
-::: columns
-::: {.column width="50%"}
-**Issues Identified:**
-
-- **Budget errors:** 52 movies with budget < $1,000
-  - Example: Budget = $1, causing ROI > 1 billion%
-- **Extreme ROI outliers:** Max uncapped ROI = 1,239,638,200%
-- **Missing cast data:** 88% of movies (4,671)
-  - Only 640 movies (12%) have historical actor ROI
-:::
-
-::: {.column width="50%"}
-**Solutions Applied:**
-
-1. **Budget filter:** Removed movies < $1,000
-2. **ROI capping:** 99th percentile = 6,620.4%
-3. **Data validation:** Final dataset = 5,311 movies
-4. **Feature engineering:** Created star_tier, is_alist
-
-**Result:** Clean, analyzable dataset with realistic ROI values
-:::
-:::
 
 ## Methodology {.smaller}
 
@@ -131,12 +106,6 @@ execute:
 :::
 :::
 
-## Star Power Analysis {.smaller}
-
-![Top 20 Actors by ROI](images/analysis/viz_3_star_power.png)
-
-**Key Finding:** Actors with 300%+ historical ROI consistently deliver high returns
-
 ## Statistical Evidence {.smaller}
 
 ::: columns
@@ -157,123 +126,58 @@ execute:
 :::
 :::
 
-**Note:** Cast ROI correlation is 0.078 (weak linear relationship), and ML confirms this with low feature importance of 1.12% (rank #29)
+**Note:** Cast ROI correlation is 0.078 explains only **0.6% of variance** in movie success. The other **99.4%** is driven by factors unrelated to star power. ML confirms: 1.12% importance (rank #29)
 
-## ANOVA: Star Tiers {.smaller}
-
-::: columns
-::: {.column width="50%"}
-**Mean ROI by Star Category:**
-
-- Superstar (cast_avg_roi >300%): **788.5% ROI** (124 movies, 2.3%)
-- A-list (cast_avg_roi 150-300%): **215.8% ROI** (169 movies, 3.2%)
-- B-list (cast_avg_roi 50-150%): **62.6% ROI** (225 movies, 4.2%)
-- Unknown/C-list (cast_avg_roi <50%): **350.1% ROI** (4,793 movies, 90.2%)
-
-**F-statistic: 19.1, p < 0.001**
-:::
-
-::: {.column width="50%"}
-![](images/analysis/anova_star_tier_comparison.png){width=100%}
-:::
-:::
-
-::: {style="font-size: 0.85em; margin-top: 1em; padding: 0.5em; background-color: #fff3cd; border-left: 4px solid #ffc107;"}
-**Note:** The Unknown/C-list category's high ROI (350.1%) is misleading for two reasons: (1) It includes 88% of movies with missing cast data, and (2) It's heavily skewed by **micro-budget outliers** (e.g., a $10K film earning $1M = 10,000% ROI). This is NOT evidence that unknown actors perform better. Our star power analysis focuses on the 640 movies (12%) with complete cast financial data.
-:::
-
-## T-Test: Star Power Impact {.smaller}
-
-![](images/analysis/ttest_alist_comparison.png){width=90%}
+## Machine Learning Evidence {.smaller}
 
 ::: columns
 ::: {.column width="50%"}
-**All Other Films:**
-- Mean ROI: 337.2%
-- Sample: 5,018 movies
-- (Includes B-list, C-list, & Unknown)
-
-**Top-Tier Stars (A-list + Superstar):**
-- Mean ROI: 458.2%
-- Sample: 293 movies
-- (cast_avg_roi >= 150%)
-:::
-
-::: {.column width="50%"}
-**Difference: +121.0% ROI**
-
-- T-statistic: 2.25
-- P-value: 0.024
-- Cohen's d: 0.14 (negligible effect size)
-
-**Why +121% is "negligible":**
-- **High variance** - distributions overlap heavily
-- Average driven by **outliers**, not consistency
-- Stars don't **guarantee** higher ROI
-- Predictability near zero (d=0.14)
-:::
-:::
-
-## Machine Learning Results {.smaller}
-
-**6 Models Trained (Revenue Excluded - Fixed):**
+**6 Models Trained:**
 
 | Model | R² Score |
 |-------|----------|
 | **XGBoost** | **33.7%** ✓ |
-| Lasso Regression | 31.5% |
-| Linear Regression | 31.5% |
-| Ridge Regression | 31.5% |
-| Gradient Boosting | 30.3% |
+| Lasso | 31.5% |
+| Linear | 31.5% |
+| Ridge | 31.5% |
+| Gradient Boost | 30.3% |
 | Random Forest | 29.9% |
 
-::: {style="font-size: 0.75em; margin-top: 1em; padding: 0.5em; background-color: #d1ecf1; border-left: 4px solid #0c5460;"}
-**Fixed:** Revenue excluded from features. R² dropped from 93.2% to 33.7% - the original high accuracy was due to target leakage.
+::: {style="font-size: 0.7em; margin-top: 0.5em; padding: 0.3em; background-color: #d1ecf1;"}
+**Fixed:** Revenue excluded (target leakage)
+:::
 :::
 
-## Feature Importance {.smaller}
+::: {.column width="50%"}
+**Top 5 Features (XGBoost):**
 
-![](images/analysis/feature_importance_fixed.png){width=80%}
-
-**Top 5 Features (ML Importance - Fixed):**
-1. **budget_micro: 30.4%** (Low budget category)
-2. **runtime_long: 8.2%** (Movie length)
+1. **budget_micro: 30.4%** (Low budget)
+2. **runtime_long: 8.2%** (Length)
 3. **vote_count: 5.3%** (Popularity)
-4. **num_top_actors: 5.0%** (Number of stars)
-5. **is_franchise: 4.7%** (Sequel status)
+4. **num_top_actors: 5.0%** (# of stars)
+5. **is_franchise: 4.7%** (Sequel)
 
-**Star Power (cast_avg_roi): 1.12% - Rank #29**
+**Star Power: 1.12% (Rank #29 of 51)**
+:::
+:::
 
-## Budget vs ROI {.smaller}
+## Star Power: Top Actors by ROI {.smaller}
 
-![Star power vs budget comparison](images/analysis/star_power_vs_budget.png)
+![Top 20 Actors by Historical ROI](images/analysis/viz_3_star_power.png){width=85%}
 
-- Budget correlation with ROI: r = -0.135 (weak negative)
-- Star power correlation: r = 0.078 (weak positive)
-- **Implication:** Neither shows strong linear relationship, but ML reveals complex patterns
+**Key Finding:** Even actors with 300%+ historical ROI don't guarantee movie success
 
-## Release Timing {.smaller}
+## Feature Importance Visualization {.smaller}
 
-![Seasonality patterns exist but aren't decisive](images/analysis/viz_2_seasonality.png)
+![XGBoost Feature Importance Rankings](images/analysis/feature_importance_fixed.png){width=90%}
 
-- June: Highest revenue ($153.8M avg)
-- But release month: Only 1.2% of prediction
-- **Implication:** WHEN matters less than WHO
+**Micro-budget films (budget < $1M) are 27× more important than star power**
 
-## Model Predictions {.smaller}
+::: {style="font-size: 0.8em; margin-top: 0.5em;"}
+**Why micro-budget dominates:** Lower budgets = easier ROI wins
 
-**Hypothetical Scenarios:**
-
-| Scenario | Budget | Cast ROI | Predicted ROI | Profit |
-|----------|--------|----------|---------------|--------|
-| Summer Blockbuster | $100M | 300% | **66%** | $66M |
-| Low-Budget Horror | $2M | 50% | **31%** | $620K |
-| Holiday Animation | $75M | 200% | **62%** | $46.5M |
-
-**Key:** Same budget, different cast → 35% ROI difference
-
-::: {style="font-size: 0.75em; margin-top: 0.5em; padding: 0.5em; background-color: #fff3cd; border-left: 4px solid #ffc107;"}
-**Note:** ROI values corrected to use Net ROI formula: (Revenue - Budget) / Budget × 100
+- $5M film → $25M revenue = **400% ROI**
+- $200M film → $400M revenue = **100% ROI**
 :::
 
 ## Practical Implications {.smaller}
@@ -299,49 +203,31 @@ execute:
 
 **Bottom Line:** Budget discipline first, quality content second, stars third (if at all)
 
-## Limitations & Future Work {.smaller}
-
-**Limitations:**
-- **Limited cast data:** Only 12% of movies (640) have complete actor ROI history
-- **Small effect size:** Cohen's d = 0.14 (negligible practical significance)
-- **Modest model accuracy:** Best R² = 33.7% (66% of variance unexplained)
-- Pre-streaming era data (1915-2017)
-- No marketing spend data
-- No social media metrics
-- Correlation ≠ causation
-
-**What We Fixed:**
-- ✓ Removed revenue feature (target leakage)
-- ✓ R² corrected from 93.2% to 33.7%
-- ✓ Feature importance accurately reflects pre-release predictors
-
-**Future Research:**
-- Add streaming platform data (Netflix, Disney+)
-- Include social media influence metrics
-- Test with 2020-2025 releases
-- Analyze marketing spend impact
+::: {style="font-size: 0.75em; margin-top: 0.8em; padding: 0.5em; background-color: #e8f4f8; border-left: 4px solid #3498db;"}
+**Proof in practice:** A24's strategy (low budgets + quality) consistently outperforms star-heavy blockbusters on ROI. *Hereditary*: $10M budget → $80M revenue = **700% ROI**
+:::
 
 ## Conclusion {.center}
 
 ### **Stars Are NOT Worth Their Premiums**
 ### **(based on ROI data)**
 
-::: {.fragment .fade-in}
 **Statistical Evidence:**
 - Weak correlation (r = 0.078, p < 0.001)
 - Explains only 0.61% of variance
 - Negligible effect size (Cohen's d = 0.14)
-- Based on 640 movies (12%) with complete cast financial data
 
-**Machine Learning Evidence (Fixed):**
+**Machine Learning Evidence:**
 - Star power: **1.12% importance (Rank #29 of 51)**
-- XGBoost R²: **33.7%** (after fixing target leakage)
+- XGBoost R²: **33.7%**
 - Top factors: Budget category (30%), Runtime (8%), Popularity (5%)
+
+**Data-Driven Recommendation:** Focus on production quality, franchise potential, and budget management rather than celebrity salaries.
+
+::: {style="font-size: 0.7em; margin-top: 1em; padding: 0.4em; background-color: #f8f9fa; border-left: 3px solid #6c757d;"}
+**Limitations:** Only 12% of movies have complete cast data. Pre-streaming era (1915-2017). R² = 33.7% means 66% of variance unexplained.
 :::
 
-::: {.fragment .fade-in}
-**Data-Driven Recommendation:** Focus on production quality, franchise potential, and budget management rather than celebrity salaries. Consider talented unknown actors over expensive stars.
-:::
 
 ## Questions? {.center}
 
